name:                ghcjs-jqueryui
version:             0.1.0.0
synopsis:            jQuery-UI bindings for GHCJS
-- description:         
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Dan Frumin
maintainer:          difrumin@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  ghcjs-options:       -O2 -Wall
  exposed-modules:     JavaScript.JQuery.UI,
                       JavaScript.JQuery.UI.Class,
                       JavaScript.JQuery.UI.TH,
                       JavaScript.JQuery.UI.Internal
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       text >= 0.11,
                       template-haskell,
                       parsec,
                       th-orphans,
                       data-default,
                       ghcjs-base,
                       ghcjs-jquery
  default-language:    Haskell2010